// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`importSync > with presets > babel7 > importSync accepts template argument with dynamic part 1`] = `
"import esc from "../../src/addon/es-compat2";
import * as _importSync20 from "./fixtures/results/chart-result";
import * as _importSync40 from "./fixtures/results/fact-result";
import * as _importSync60 from "./fixtures/results/helper";
import * as _importSync80 from "./fixtures/results/pre-alpha";
import * as _importSync00 from "./fixtures/results/pre-beta";
import * as _importSync100 from "./fixtures/results/task-result";
function getFile(file) {
  return {
    "chart-result": esc(_importSync20),
    "fact-result": esc(_importSync40),
    "helper": esc(_importSync60),
    "pre-alpha": esc(_importSync80),
    "pre-beta": esc(_importSync00),
    "task-result": esc(_importSync100)
  }[file].default;
}"
`;

exports[`importSync > with presets > babel7 > importSync template argument keeps static text after the interpolation 1`] = `
"import esc from "../../src/addon/es-compat2";
import * as _importSync20 from "./fixtures/results/chart-result";
import * as _importSync40 from "./fixtures/results/fact-result";
import * as _importSync60 from "./fixtures/results/task-result";
function getResult(type) {
  return {
    "chart-result": esc(_importSync20),
    "fact-result": esc(_importSync40),
    "task-result": esc(_importSync60)
  }["".concat(type, "-result")].default;
}"
`;

exports[`importSync > with presets > babel7 > importSync template argument supports static text before the interpolation 1`] = `
"import esc from "../../src/addon/es-compat2";
import * as _importSync20 from "./fixtures/results/pre-alpha";
import * as _importSync40 from "./fixtures/results/pre-beta";
function getPre(name) {
  return {
    "pre-alpha": esc(_importSync20),
    "pre-beta": esc(_importSync40)
  }["pre-".concat(name)].default;
}"
`;

exports[`importSync > without presets > babel7 > importSync accepts template argument with dynamic part 1`] = `
"import esc from "../../src/addon/es-compat2";
import * as _importSync20 from "./fixtures/results/chart-result";
import * as _importSync40 from "./fixtures/results/fact-result";
import * as _importSync60 from "./fixtures/results/helper";
import * as _importSync80 from "./fixtures/results/pre-alpha";
import * as _importSync00 from "./fixtures/results/pre-beta";
import * as _importSync100 from "./fixtures/results/task-result";
function getFile(file) {
  return {
    "chart-result": esc(_importSync20),
    "fact-result": esc(_importSync40),
    "helper": esc(_importSync60),
    "pre-alpha": esc(_importSync80),
    "pre-beta": esc(_importSync00),
    "task-result": esc(_importSync100)
  }[file].default;
}"
`;

exports[`importSync > without presets > babel7 > importSync template argument keeps static text after the interpolation 1`] = `
"import esc from "../../src/addon/es-compat2";
import * as _importSync20 from "./fixtures/results/chart-result";
import * as _importSync40 from "./fixtures/results/fact-result";
import * as _importSync60 from "./fixtures/results/task-result";
function getResult(type) {
  return {
    "chart-result": esc(_importSync20),
    "fact-result": esc(_importSync40),
    "task-result": esc(_importSync60)
  }[\`\${type}-result\`].default;
}"
`;

exports[`importSync > without presets > babel7 > importSync template argument supports static text before the interpolation 1`] = `
"import esc from "../../src/addon/es-compat2";
import * as _importSync20 from "./fixtures/results/pre-alpha";
import * as _importSync40 from "./fixtures/results/pre-beta";
function getPre(name) {
  return {
    "pre-alpha": esc(_importSync20),
    "pre-beta": esc(_importSync40)
  }[\`pre-\${name}\`].default;
}"
`;
